// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 1: a status outside Booked|Confirmed|Pending is refused 1`] = `
{
  "body": {
    "error": "This booking cannot be modified.",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 400,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 2: appointment with the flag off is 403 with APPOINTMENT copy 1`] = `
{
  "body": {
    "code": "feature_disabled",
    "error": "Online appointment changes are not available for this venue.",
    "feature": "guest_self_reschedule",
  },
  "dbWrites": [],
  "externalCalls": [
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 403,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 3: resource with the flag off is 403 with RESOURCE copy 1`] = `
{
  "body": {
    "code": "feature_disabled",
    "error": "Online booking changes are not available for this venue.",
    "feature": "guest_self_reschedule",
  },
  "dbWrites": [],
  "externalCalls": [
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 403,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 4: unified appointment writes calendar/service_item and NULLS the legacy pair 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 5: legacy appointment writes the practitioner pair and NULLS the unified pair 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": "svc-new",
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": null,
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": "cal-new",
        "processing_time_blocks": [],
        "service_item_id": null,
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": "svc-new",
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": null,
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 6: an unavailable slot is 409 and writes nothing 1`] = `
{
  "body": {
    "error": "This appointment slot is no longer available. Please choose another time or service.",
  },
  "dbWrites": [],
  "externalCalls": [
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 409,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 7: unmet compliance is 409 and carries the enforcement body 1`] = `
{
  "body": {
    "code": "compliance_required",
    "error": "Form required",
  },
  "dbWrites": [],
  "externalCalls": [
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 409,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 8: a stale updated_at is 412, not a silent overwrite 1`] = `
{
  "body": {
    "error": "This booking was updated elsewhere. Refresh the page and try again.",
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 412,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 9: the guarded UPDATE carries the updated_at predicate 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 10: a changed date recomputes the cancellation deadline 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 11: compliance is re-checked against the NEW date and service 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 12: modify does NOT consume the confirm token 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 13: a successful modify logs the event and notifies the guest 1`] = `
{
  "body": {
    "appointment_service_id": "svc-new",
    "booking_date": "2026-06-12",
    "booking_time": "11:00",
    "message": "Your appointment has been updated.",
    "party_size": 1,
    "practitioner_id": "cal-new",
    "success": true,
  },
  "dbWrites": [
    {
      "filters": [
        [
          "eq",
          "id",
          "11111111-1111-4111-8111-111111111111",
        ],
        [
          "eq",
          "updated_at",
          "2026-05-30T10:00:00+00:00",
        ],
        [
          "returning",
          "id",
        ],
      ],
      "op": "update",
      "payload": {
        "appointment_service_id": null,
        "booking_date": "2026-06-12",
        "booking_end_time": "11:30:00",
        "booking_time": "11:00:00",
        "calendar_id": "cal-new",
        "cancellation_deadline": "2026-06-10T10:00:00.000Z",
        "cancellation_policy_snapshot": {
          "policy": "Full refund if cancelled 48+ hours before appointment start. No refund within 48 hours of the appointment or for no-shows.",
          "refund_window_hours": 48,
        },
        "estimated_end_time": "2026-06-12T11:30:00.000Z",
        "party_size": 1,
        "practitioner_id": null,
        "processing_time_blocks": [],
        "service_item_id": "svc-new",
        "service_variant_id": null,
        "service_variant_name_snapshot": null,
        "updated_at": "2026-06-01T09:00:00.000Z",
      },
      "table": "bookings",
    },
  ],
  "externalCalls": [
    {
      "args": [
        {
          "after": {
            "booking_date": "2026-06-12",
            "booking_time": "11:00",
            "party_size": 1,
          },
          "before": {
            "booking_date": "2026-06-10",
            "booking_time": "14:00",
            "party_size": 1,
          },
          "booking_id": "11111111-1111-4111-8111-111111111111",
          "modification_actor": "guest",
          "venue_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "logBookingModifiedEvent",
      "module": "booking-modified-event",
    },
    {
      "args": [
        {
          "appointmentServiceId": null,
          "bookingDate": "2026-06-12",
          "bookingTime": "11:00:00",
          "context": "online",
          "guestId": "33333333-3333-4333-8333-333333333333",
          "serviceItemId": "svc-new",
          "venueId": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "fn": "enforceBookingCompliance",
      "module": "compliance",
    },
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
    {
      "args": [
        "22222222-2222-4222-8222-222222222222",
      ],
      "fn": "executeBookingModificationGuestNotification",
      "module": "modification-comms",
    },
  ],
  "status": 200,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 14: a missing date or time is 400 before any engine call 1`] = `
{
  "body": {
    "error": "booking_date, booking_time, practitioner_id, and appointment_service_id are required for appointment changes.",
  },
  "dbWrites": [],
  "externalCalls": [
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 400,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 15: a resource booking missing its resource id is 400 1`] = `
{
  "body": {
    "error": "booking_date, booking_time and party_size are required for modification.",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 400,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 16: a resource reschedule missing date/time is 400 1`] = `
{
  "body": {
    "error": "booking_date and booking_time are required to change this booking.",
  },
  "dbWrites": [],
  "externalCalls": [
    {
      "args": [
        "guest_self_reschedule",
      ],
      "fn": "assertAppointmentsFeatureEnabled",
      "module": "feature-flags",
    },
  ],
  "status": 400,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 17: an event ticket falls through to the TABLE branch (characterised, not fixed) 1`] = `
{
  "body": {
    "error": "The selected date/time is not available for this party size.",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 409,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 18: a non-service availability engine is 503 1`] = `
{
  "body": {
    "error": "No active dining service is configured. Add at least one active service under Dashboard → Availability.",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 503,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 19: a large party is redirected with 400 and the venue message 1`] = `
{
  "body": {
    "error": "Please call us for a party this size.",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 400,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 20: an unknown action is 400 1`] = `
{
  "body": {
    "error": "Missing or invalid body",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 400,
}
`;

exports[`POST /api/confirm - action=modify + cross-cutting (P0-9, 21 rows) > row 21: a missing booking is 404, and the row loads BEFORE auth 1`] = `
{
  "body": {
    "error": "Booking not found",
  },
  "dbWrites": [],
  "externalCalls": [],
  "status": 404,
}
`;
